test/spec_vectors/elem/ok/module_24.wat
(module (func) (table 1 funcref) (elem func 0))