test/spec_vectors/elem/fail/module_61.wat
(module (table 1 funcref) (elem (offset)))